# cymb

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
demo/: demo.c  demo.s  libc_demo.c
include/cymb/: arguments.h  assembly.h  cymb.h  diagnostic.h  elf.h  lex.h  memory.h  options.h  reader.h  result.h  tree.h  version.h.in
include/libc/: elf.h  fcntl.h  stdint.h  stdio.h  string.h  unistd.h
include/libc/sys/: syscall.h
source/: main.c
source/cymb/: arguments.c  assembly.c  cymb.c  diagnostic.c  elf.c  lex.c  memory.c  options.c  reader.c  tree.c  version.c
source/libc/: crt0.s  fcntl.s  stdio.c  string.s  unistd.s
test/: test.c  test.h  test_assembly.c  test_lex.c  test_tree.c
